# sparkparse

./: .gitignore  CLAUDE.md  IMPLEMENTATION.md  Justfile  README.md  SPARK_CONNECT_CAPTURE.md  databricks.yml  pyproject.toml
.github/workflows/: test-full.yml  test.yml
notebooks/: debug_serverless_node_types.py  sparkparse_demo.py
plans/: SPARK_CONNECT_CAPTURE.md
sparkparse/: __init__.py  alerts.py  analyze.py  app.py  capture.py  clean.py  common.py  connect.py  dashboard.py  history.py  models.py  parse.py  storage.py  styling.py  viz.py
sparkparse/assets/css/: style.css
sparkparse/pages/: dag.py  home.py  summary.py
tests/: generate_node_fixtures.py  generate_spark4_fixtures.py  test.py  test_accumulator_parsing.py  test_alerts.py  test_analyze.py  test_capture.py  test_clean.py  test_detail_parsing.py  test_full_parsing.py  test_history.py  test_storage.py  test_tree_parsing.py  test_unknown_type_parsing.py  test_viz.py
tests/data/full_logs/: nested_final_plans  nested_loop_join
tests/data/test_accumulator_parsing/: expected.json
tests/data/test_detail_parsing/: AppendData.json  ArrowEvalPython.json  ArrowEvalPythonUDTF.json  BatchEvalPython.json  BatchEvalPythonUDTF.json  BatchScan.json  CartesianProduct.json  Expand.json  FlatMapCoGroupsInArrow.json  FlatMapCoGroupsInPandas.json  FlatMapGroupsInArrow.json  FlatMapGroupsInPandas.json  MapInPandas.json  ObjectHashAggregate.json  OverwriteByExpression.json  OverwritePartitionsDynamic.json  PythonMapInArrow.json  Range.json  Sample.json  TransformWithStateInPySpark.json  expected.json  input.json
tests/data/test_full_parsing/: expected_nested_final_plans.json  expected_nested_loop_join.json
tests/data/test_tree_parsing/: test_plan_parses_correctly_expected.json  test_plan_parses_correctly_input.json  test_tree_parses_correctly2_expected.json  test_tree_parses_correctly2_input.txt  test_tree_parses_correctly_expected.json  test_tree_parses_correctly_input.txt
typings/dash/: __init__.pyi
typings/databricks/: __init__.pyi
typings/pyspark/sql/: __init__.pyi  column.pyi
(+1 files in other folders)
