[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sparkparse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dash>=2.18.2",
    "falsa>=0.0.3",
    "pandas>=2.2.3",
    "polars>=1.24.0",
    "pydantic>=2.10.6",
    "pyspark>=3.5.5",
    "pytest>=8.3.5",
    "ruff>=0.9.9",
]

[tool.hatch.build.targets.wheel]
packages = ["sparkparse"]