[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sparkparse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "falsa>=0.0.3",
    "fsspec>=2024.1.0",
    "pandas>=2.2.3",
    "polars>=1.24.0",
    "pydantic>=2.10.6",
    "pyspark>=3.5.5",
    "dash-bootstrap-components>=1.6.0,<2",
    "plotly>=6.0.0",
    "dash-cytoscape>=1.0.2",
    "dash-ag-grid>=31.3.0",
]

[project.optional-dependencies]
s3 = ["s3fs>=2024.1.0"]
azure = ["adlfs>=2024.1.0"]
gcs = ["gcsfs>=2024.1.0"]
cloud = ["s3fs>=2024.1.0", "adlfs>=2024.1.0", "gcsfs>=2024.1.0"]


[tool.hatch.build.targets.wheel]
packages = ["sparkparse"]

[project.scripts]
sparkparse = "sparkparse.app:app"

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "pyrefly>=1.0.0",
    "pytest>=8.3.5",
    "ruff>=0.9.9",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["sparkparse"]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
